[package]
name = "arkime-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
[dependencies.pnet]
version = "0.34.0"

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"