[package]
name = "arkime-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
pnet = "0.34.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.35.1", features = ["full"] }
libc = "0.2"
ctrlc = { version = "3.4", features = ["termination"] }
rustix = "0.38.30"
ipnet = "2.9.0"
lazy_static = "1.4"
config = "0.14.0"
notify = "6.0"
clap = { version = "4.5.8", features = ["derive"] }
